# synthworld

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_DICTIONARY.md  GOLDEN_REVIEW.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  USER_GUIDE.md  conftest.py  pyproject.toml
.github/: pull_request_template.md
.github/DISCUSSION_TEMPLATE/: announcements.yml  ideas.yml  q-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
examples/: README.md  evaluate_all.py  evaluate_extraction.py  generate_benchmarks_doc.py
src/synthworld/: __init__.py  __main__.py  baselines.py  cli.py  connection.py  connection_generator.py  connection_metrics.py  connection_serialization.py  corpus_metrics.py  corpus_serialization.py  evaluation.py  exposure_generator.py  exposures.py  extraction.py  extraction_generator.py  extraction_serialization.py  generator.py  metrics.py  models.py  risk.py  risk_generator.py  risk_metrics.py  risk_serialization.py  serialization.py
src/synthworld/benchmarks/: CONNECTION_PUBLIC_SHA256SUMS  CONNECTION_SHA256SUMS  EXTRACTION_ANSWER_SHA256SUMS  EXTRACTION_PUBLIC_SHA256SUMS  EXTRACTION_SHA256SUMS  RISK_ANSWER_SHA256SUMS  RISK_PUBLIC_SHA256SUMS  SHA256SUMS  __init__.py  connection-golden-v1.json  connection-public-golden-v1.json  extraction-answer-golden-v1.json  extraction-golden-v1.json  extraction-public-golden-v1.json  golden-v1.json  risk-answer-golden-v1.json  risk-public-golden-v1.json
tests/: test_baselines.py  test_cli.py  test_connection_benchmark_metrics.py  test_connection_generator.py  test_corpus_metrics.py  test_evaluation.py  test_exposure_generator.py  test_exposure_ground_truth.py  test_extraction_benchmark.py  test_extraction_generator.py  test_extraction_golden_benchmark.py  test_generator.py  test_golden_benchmark.py  test_honesty_gate.py  test_metrics.py  test_relationship_ground_truth.py  test_risk_benchmark_metrics.py  test_risk_generator.py  test_risk_golden_benchmark.py  test_risk_models.py  test_safety.py
